--- a/EasyWeather/EasyWeather.csproj
+++ b/EasyWeather/EasyWeather.csproj
@@ -13,5 +13,9 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Weather\" />
   </ItemGroup>
 </Project>
